--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,5 +89,10 @@ layout: default
         Tushar Ulhare
       </a>
     </li>
+    <li>
+      <a href="https://github.com/mahajanayush77/">
+        Ayush Mahajan
+      </a>
+    </li>  
   </ol>
 </div>
